Bug Squash Anterior: 35 faltando

--- a/johnatas-henrique/css/estilo.css
+++ b/johnatas-henrique/css/estilo.css
@@ -5,18 +5,18 @@
 
 @font-face {
   font-family: animeace;
-  src: url('../fonts/animeace2_reg.ttf');
+  src: url( '../fonts/animeace2_reg.ttf' );
 }
 
 @font-face {
   font-family: animeace;
-  src: url('../fonts/animeace2_bld.ttf');
+  src: url( '../fonts/animeace2_bld.ttf' );
   font-weight: 700;
 }
 
 body {
-  font-family: animeace, sans-serif;
-  background-image: url('../imagens/bg.jpg');
+  font-family: animeace , sans-serif;
+  background-image: url( '../imagens/bg.jpg' );
   background-size: cover;
   background-position: center;
 }
@@ -52,7 +52,7 @@ aside {
 
 .grid-paleta {
   display: inline-grid;
-  grid-template-columns: repeat(2, auto);
+  grid-template-columns: repeat( 2 , auto );
   grid-column-gap: 15px;
 }
 
@@ -97,7 +97,7 @@ aside {
   grid-area: caixa;
   margin-top: 35px;
   display: inline-grid;
-  grid-template-columns: repeat(5, auto);
+  grid-template-columns: repeat( 5 , auto );
 }
 
 .pixels {
@@ -118,16 +118,15 @@ aside {
   margin-top: 5px;
 }
 
-a.voltar-topo,
-a:visited.voltar-topo {
+.voltar-topo , .voltar-topo:visited {
   text-decoration: none;
+  font-size: 1.1em;
   -webkit-text-stroke: 1px black;
   -webkit-text-fill-color: white;
-  margin: 50px 0 0 0;
-  font-weight: bold;
+  margin: 50px 0 0;
 }
 
-a:hover.voltar-topo {
+.voltar-topo:hover {
   text-decoration: none;
   background-color: red;
   color: white;
